--- a/main.css
+++ b/main.css
@@ -3,8 +3,10 @@ body {
   font-family: 'Times New Roman', Times, serif;
   font-size: 18px;
   line-height: 1.5;
-  background-color: rgba(255, 182, 193, 0.486);
+  background-color:white
 }
+
+
 
 /* Select all h1, h2, ..., h6 tags */
 h1, h2, h3, h4, h5, h6 {
