--- a/structure.css
+++ b/structure.css
@@ -2,10 +2,5 @@ body {
     font-family: 'Times New Roman', Times, serif;
     font-size: 18px;
     line-height: 1.5;
-    background-color: lightgreen;
-  }
-
-  .example {
-    width: 800px;
-    height: 200px;
+    background-color:lightpink
   }
